--- a/css/tenantProfile.css
+++ b/css/tenantProfile.css
@@ -212,3 +212,21 @@
     z-index: 10000;
   }
 
+.btn-primary {
+    float: right;
+    background-color: #0ba310;
+    border: none;
+}
+
+.btn-primary:hover {
+    background-color: #29bb2e;
+}
+
+.cancel {
+    border: 1px solid black;
+}
+
+.formHeader {
+    text-align: center;
+    font-size: 16px;
+}
