--- a/css/tenantPayment.css
+++ b/css/tenantPayment.css
@@ -84,6 +84,46 @@
     width: 100%;    
 }
 
+.search_wrap{
+	width: 400px;
+    margin-right: 1px;
+    float: right;
+    margin-top: 47px;
+}
+
+.search_wrap .search_box{
+	position: relative;
+	width: 300px;
+	height: 25px;
+}
+
+.search_wrap .search_box .input{
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	padding-left: 10px ;
+    padding-right: 80px;
+	font-size: 14px;
+}
+
+.search_wrap .search_box .btn{
+	position: absolute;
+	top: 0;
+	right: 1px;
+	width: 45px;
+	height: 98%;
+	background: #a1f8a4;
+	cursor: pointer;
+}
+
+.search_wrap .search_box .btn.btn_common .fas{
+	position: relative;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+	font-size: 30px;
+}
 
 .dropdown-menu {
     margin-left: 1000px;
@@ -94,8 +134,29 @@
     background-color: white;
 }
 
-.box {
-    color:#2f3031;
+.btn-add {
+    background-color: #a1f8a4;
+    margin-left: 120px;
+    margin-top: 5%;
+    font-weight: bold;
+    color: #2f3031;
+}
+
+.table-header {
+    background-color: #baf3d7;
+}
+
+.table {
+    margin-left: 25px;
+    width: 90%;
+}
+
+.data-row {
+    font-size: 14px;
+}
+
+.action-icon {
+    color: #0ba310;
 }
 
 .popup {
@@ -124,3 +185,167 @@
     background: rgba(0,0,0,.10);
     z-index: 10000;
   }
+
+  .popup1{
+    visibility: hidden;
+    width: 33.333333%;
+    padding: 15px;
+    left: 0;
+    margin-left: 33.333333%;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    background: white;
+    position: absolute;
+    top: 15%;
+    box-shadow: 5px 5px 5px #000;
+    z-index: 10001;
+  }
+
+  .overlay1 {
+    visibility: hidden;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0,0,0,.10);
+    z-index: 10000;
+  }
+
+.btn-primary {
+    float: right;
+    background-color: #0ba310;
+    border: none;
+}
+
+.btn-primary:hover {
+    background-color: #29bb2e;
+}
+
+.cancel {
+    float: left;
+    background-color: #0ba310;
+    border: none;
+}
+
+.formHeader {
+    text-align: center;
+    font-size: 16px;
+}
+
+.combo-status {
+    margin-top: 5%;
+}
+
+/** TABLE CSS **/
+body {
+    color: #566787;
+    background: #44d0f4;
+    font-family: 'Roboto', sans-serif;
+}
+
+.table-wrapper {
+    min-width: 10%;
+    background: #fff;
+    padding: 20px;
+    box-shadow: 0 1px 1px 1px rgba(0,0,0,.2);
+}
+
+.search-box {
+     margin-left: 234%;
+     margin-bottom: 5%;
+     width: 60%;
+}
+.search-box input {
+    height: 34px;
+    border-radius: 20px;
+    padding-left: 35px;
+    border-color: #ddd;
+    box-shadow: none;
+}
+.search-box input:focus {
+    border-color: #3FBAE4;
+}
+.search-box i {
+    color: #a0a5b1;
+    position: absolute;
+    font-size: 19px;
+    top: 8px;
+    left: 222%;
+}
+table.table tr th, table.table tr td {
+    border-color: #e9e9e9;
+}
+table.table-striped tbody tr:nth-of-type(odd) {
+    background-color: #fcfcfc;
+}
+table.table-striped.table-hover tbody tr:hover {
+    background: #f5f5f5;
+    width: 150%;
+}
+table.table th i {
+    font-size: 13px;
+    margin: 0 8px;
+    cursor: pointer;
+}
+table.table td:last-child {
+    width: 130px;
+}
+table.table td a {
+    color: #a0a5b1;
+    display: inline-block;
+    margin: 0 5px;
+}
+table.table td a.edit {
+    color: #FFC107;
+}
+table.table td a.delete {
+    color: #E34724;
+}
+table.table td i {
+    font-size: 19px;
+}    
+.pagination {
+    float: right;
+    margin: 0 0 5px;
+    margin-right: 80px;
+}
+.pagination li a {
+    border: none;
+    font-size: 95%;
+    width: 30px;
+    height: 30px;
+    color: #999;
+    margin: 0 2px;
+    line-height: 30px;
+    border-radius: 30px !important;
+    text-align: center;
+    padding: 0;
+}
+.pagination li a:hover {
+    color: #666;
+}	
+.pagination li.active a {
+    background: #03A9F4;
+}
+.pagination li.active a:hover {        
+    background: #0397d6;
+}
+.pagination li.disabled i {
+    color: #ccc;
+}
+.pagination li i {
+    font-size: 16px;
+    padding-top: 6px
+}
+.hint-text {
+    float: left;
+    margin-top: 6px;
+    font-size: 95%;
+    margin-left: 25px;
+}
+
+.margin {
+    height: 120px;
+}
