--- a/css/tenantProfile.css
+++ b/css/tenantProfile.css
@@ -348,3 +348,71 @@ table.table td i {
 .margin {
     height: 10px;
 }
+
+/*Pop-up Tenants*/
+
+body{
+    letter-spacing: 0.7px;
+    background-color: #eee;
+}
+        
+.container{
+    margin-top: 120px;
+    margin-bottom: 120px;
+}
+       
+.btn-lg, a:focus, a:active {
+    outline: none !important;
+    box-shadow: none !important;        
+}
+
+
+p{
+    font-size: 13px ;
+}
+        
+.small{
+    font-size: 9px !important;
+}
+
+.cursor-pointer{
+    cursor: pointer;
+}
+
+.btn-round-lg {
+    border-radius: 22.5px;
+    background-color: #eee;
+    color: #3D5AFE;
+    font-size: 14px;
+    font-weight: 600;
+    letter-spacing: 0.9px;
+    padding: 8px 20px  8px  20px !important;
+    border: 1px solid #fff;
+}
+
+.btn-round-lg:hover{
+    background-color: #fff;
+    color: #3D5AFE;
+    border: 1px solid #fff;
+}
+
+.btn-round-lg:focus{
+    border: 1px solid #fff !important;
+}
+
+.card{
+    background-color: #a1f8a4 !important;
+    color:black;
+    height: 245px;
+}
+
+.nsize{
+    width: 576.61px;
+    height: 153px;
+}
+.bsize{
+    width: 384px;
+    height: 198px;
+}
+
+
