--- a/css/room.css
+++ b/css/room.css
@@ -140,8 +140,8 @@
 
 .btn-add {
     background-color: #a1f8a4;
-    margin-left: 118px;
-    margin-top: 5%;
+    margin-left: 90px;
+    margin-top: 25px;
     font-weight: bold;
     color: #2f3031;
 }
@@ -345,7 +345,7 @@ table.table td i {
 }
 
 .margin {
-    height: 120px;
+    height: 10px;
 }
 
 .editPen{
@@ -358,7 +358,7 @@ table.table td i {
 .switch {
     position: relative;
     display: inline-block;
-    width: 60px;
+    width: 40px;
     height: 23px;
   }
   
@@ -401,9 +401,9 @@ table.table td i {
   }
   
   input:checked + .slider:before {
-    -webkit-transform: translateX(35px);
-    -ms-transform: translateX(35px);
-    transform: translateX(35px);
+    -webkit-transform: translateX(20px);
+    -ms-transform: translateX(20px);
+    transform: translateX(20px);
   }
   
   /* Rounded sliders */
