--- a/css/utility.css
+++ b/css/utility.css
@@ -140,8 +140,8 @@
 
 .btn-add {
     background-color: #a1f8a4;
-    margin-left: 118px;
-    margin-top: 5%;
+    margin-left: 90px;
+    margin-top: 28px;
     font-weight: bold;
     color: #2f3031;
 }
@@ -346,5 +346,5 @@ table.table td i {
 }
 
 .margin {
-    height: 120px;
+    height: 10px;
 }
